# helix

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: code_checks.yml  publish.yml  unit_tests.yml
examples/inference-opt/: infer.py  prepare.py  program.md  pyproject.toml
src/helix/: __init__.py  agent.py  cli.py  config.py  display.py  evaluate.py  git.py  hardware.py  init.py  results.py  runner.py  templates.py
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py  test_display.py  test_git.py  test_hardware.py  test_init.py  test_results.py  test_runner.py
